syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pm.hello.grpc";
option java_outer_classname = "HelloProto";

package hello;

// =====================
// Hello Service
// =====================
service HelloService {

  // Simple hello method
  rpc SayHello (HelloRequest) returns (HelloResponse);

}

// =====================
// Request
// =====================
message HelloRequest {
  string name = 1;
}

// =====================
// Response
// =====================
message HelloResponse {
  string message = 1;
}