syntax = "proto3";

option java_package = "billing";
option java_multiple_files = true;


service BillingService {
  // Simple unary call
 rpc CreateBillingService (BillingRequest) returns (BillingResponse);
}

message  BillingRequest{
  string patientId=1;
  string email=2;
  string name=3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}